--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>热刺是英超冠军！</h1>
+<p>Zju is the best college in China.</p>
 </body>
 </html>
